style.css
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

body {
    font-family: sans-serif;
    font-size: 9pt;
}

h2 {
    font-family: sans-serif;
    font-size: 25px;
}

span {
    font-family: sans-serif;
    font-size: 8pt;
}

label {
    font-family: sans-serif;
    font-size: 8pt;
    /* margin-left: 8px; */
}

button {
    font-family: sans-serif;
    font-size: 9pt;
    margin-top: 6px;
    margin-bottom: 6px;
}

svg {
    width: 600px;
    height: auto;
}

@media (max-width: 800px) {
    svg {
        width: 100%;
        height: auto;
    }
}

